k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifiappay
  labels:
    name: unifiappay
    environment: production
    app: unifiaap-pay
    compliance: bacen
